# notion-database-sys

./: .dockerignore  .env.example  .gitignore  .gitmodules  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REFACTOR_REPORT.md  SECURITY.md  audit-report.json  docker-compose.yml  eslint.config.js  index.html  merge_to_develop_and_push.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  sonar-project.properties  sonarcloud-issues.json  sonarcloud-report.txt  tsconfig.base.json  tsconfig.json  turbo.json  update_audit.patch  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: fetch-sonar-issues.py  stub-engine.sh
.github/workflows/: ci.yml
.turbo/cache/: 0242c224b328c81e-manifest.json  0242c224b328c81e-meta.json  0242c224b328c81e.tar.zst  0a7020557d79020b-manifest.json  0a7020557d79020b-meta.json  2f1870a8c55c6c1b-manifest.json  2f1870a8c55c6c1b-meta.json  31f79500e166b4f9-manifest.json  31f79500e166b4f9-meta.json  3d24c5e99c646c07-manifest.json  3d24c5e99c646c07-meta.json  3d24c5e99c646c07.tar.zst  4fffdba2da54c6f5-manifest.json  4fffdba2da54c6f5-meta.json  4fffdba2da54c6f5.tar.zst  5193dddffd50bf12-manifest.json  5193dddffd50bf12-meta.json  641ae40e8666a0f2-manifest.json  641ae40e8666a0f2-meta.json  641ae40e8666a0f2.tar.zst  72ee28555b35368e-manifest.json  72ee28555b35368e-meta.json  72ee28555b35368e.tar.zst  73b9f6a4eeda63ad-manifest.json  73b9f6a4eeda63ad-meta.json  93a53071dc3d4c7b-manifest.json  93a53071dc3d4c7b-meta.json  93a53071dc3d4c7b.tar.zst  9bc48819bf2676ef-manifest.json  9bc48819bf2676ef-meta.json  9bc48819bf2676ef.tar.zst  a79b7a2ff3a6f6b2-manifest.json  a79b7a2ff3a6f6b2-meta.json  a79b7a2ff3a6f6b2.tar.zst  c5ed66f94eed11ce-manifest.json  c5ed66f94eed11ce-meta.json  c5ed66f94eed11ce.tar.zst  d6a92e7ed4be658e-manifest.json  d6a92e7ed4be658e-meta.json  f817da2839befacf-manifest.json  (+2 more)
docker/: init-databases.sql
docs/: GENERAL_RESSOURCES.md  GLOSSARY.md  SONARQUBE.md
docs/cheatsheet/: README.md
examples/parent-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
playground/: Makefile  README.md  tsconfig.json  vite.config.ts
playground/src/: App.tsx  main.tsx
scripts/: audit-summary.sh  audit.sh  fetch-sonar-issues.py  merge_to_develop_and_push.sh  seed-playground.mjs
services/dbms/: CsvDbAdapter.ts  DbAdapterFactory.ts  DbMemoCache.ts  JsonDbAdapter.ts  MongoDbAdapter.ts  PostgresDbAdapter.ts  index.ts  inferSchema.ts  smoke-test.ts  types.ts
services/sonarqube/: Dockerfile
src/: App.tsx  Makefile  README.md  index.css  index.html  main.tsx  object_database.tsx  theme.css  vite.config.ts
src/component/: README.md  index.ts  types.ts
src/lib/engine/: Cargo.toml  bridge.ts
src/lib/engine/src/: compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  types.rs  vm.rs
src/lib/engine/src/functions/: array.rs  date.rs  logic.rs  math.rs  mod.rs  text.rs
src/server/logger/native/: CMakeLists.txt  binding.cpp  binding.d.ts
(+624 files in other folders)
