[package]
name = "formula-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance formula engine for Notion-like database system"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
